--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -94,13 +94,13 @@
                   </div>
                   <div id="file-upload" class="form-group">
                      <div class="row">
-                        <div class="col-md-6">
-                           <button type="file" id="adjuntar-archivo" class="btn btn-warning btn-lg" placeholder="Adjuntar archivo">Adjuntar archivo</button>
-                        </div>
-                        <div class="col-md-6">
-                           <p>nombre_del_archivo_cargado.docx</p>
-                        </div>
-                     </div><!--/.row-->
+                        <div class="col-xs-12">
+                           <button type="file" id="adjuntar-archivo" class="col-sm-6 col-xs-12 btn btn-warning btn-lg" placeholder="Adjuntar archivo">Adjuntar archivo</button>
+                           <div class="col-sm-6 col-xs-12">
+                              <p class="ellipsis">nombre_del_archivo_cargado.docx</p>
+                           </div>
+                        </div><!--/.col-xs-12-->
+                     </div>
                      <div class="progress progress-striped active">
                         <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
                            <span class="sr-only">45% completado</span>
