--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -21,14 +21,11 @@
             <fieldset>
                 <legend class="title-secondary">Filtrar resultados</legend>
                 <section id="normativa-filters-tags" class="filters">
-                    <button class="tag filters-tags" ng-repeat="filtro in filtros">Filtro categoría 1 <i class="fa fa-remove"></i></button>
+                    <button class="tag filters-tags" ng-repeat="filtro in filtrosActivos">{{filtro.nombre}} <i class="fa fa-remove"></i></button>
+            
 
 
-
-                    <button class="tag filters-tags">Filtro categoría 2 <i class="fa fa-remove"></i></button>
-                    <button class="tag filters-tags">Tema 1 <i class="fa fa-remove"></i></button>
-                    <button class="tag filters-tags">Filtro años 1 <i class="fa fa-remove"></i></button>
-                    <a href="#" title="Mostrar todos" class="show-all">mostrar todos (+20)</a>
+                    <a href="#" title="Mostrar todos" ng-show="filtrosActivos.length > 0 " class="show-all">mostrar todos (+20)</a>
                 </section><!--/#normativa-filters-tags-->
                 <div>
                     <div class="row">
@@ -43,7 +40,7 @@
                         </div>
                         <div class="form-group col-md-12 col-xs-6">
                             <label for="filters-tema" class="title-third">Tema</label>
-                             <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control" >
+                             <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control"  ng-change="agregarfiltroTema()" >
                                   <option value="" selected disabled>TODOS </option>
                              </select>
                         </div>
