--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -2,14 +2,14 @@
     <section class="jumbotron">
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
-                <article id ="jumbo-info" class="col-md-8">
+                <article id ="jumbo-info" class="col-md-8 pull-right">
                     <h1 class="title-primary">Digesto Jurídico Argentino</h1>
                     <p class="text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
                 </article>
-                <div class="col-md-4">
+                <div class="col-md-4 pull-left">
                     <form role="form" id="landing-form-search" class="col-md-12 form-base">
                         <fieldset>
-                            <legend class="font-bold title-third">Buscar normas</legend>
+                            <legend class="text-bold title-third">Buscar normas</legend>
                             <div class="form-group">
                                 <label for="norma-nro-codigo" class="title-fourth">N° / Código de Norma</label>
                                 <input type="text" id="norma-nro-codigo" class="form-control" placeholder="Ingresar número de norma">
@@ -103,7 +103,7 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur.</p>
-                            <a ui-sref="#" title="Ingrese una consulta" class="btn btn-warning">Ingrese una consulta</a>
+                            <a ui-sref="#" title="Ingrese una consulta" class="btn btn-primary">Ingrese una consulta</a>
                         </div>
                         <figure class="col-md-3">
                             <img src="#" alt="Envío de consultas" />
@@ -124,7 +124,7 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur.</p>
-                            <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-warning">Ver Ley 26.939</a>
+                            <a ui-sref="#" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
                         </div>
                         <figure class="col-md-3 pull-left">
                             <img src="#" alt="Envío de consultas" />
