--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -91,30 +91,33 @@
                         <span class="input-group-addon">?</span>
                         <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191"/>
                      </div>
-                  </div>
-                  <div id="file-upload" class="form-group">
-                     <div class="row">
-                        <div class="col-xs-12">
-                           <button type="file" id="adjuntar-archivo" class="col-sm-6 col-xs-12 btn btn-warning btn-lg" placeholder="Adjuntar archivo">Adjuntar archivo</button>
-                           <div class="col-sm-6 col-xs-12">
-                              <p class="ellipsis">nombre_del_archivo_cargado.docx</p>
-                           </div>
-                        </div><!--/.col-xs-12-->
+                  </div><!--/.form-group-->
+               </div>
+               <div id="file-upload" class="col-md-6 form-group">
+                  <div class="row">
+                     <button type="file" id="adjuntar-archivo" class="col-sm-6 col-xs-12 btn btn-primary btn-lg" placeholder="Adjuntar archivo">Adjuntar archivo</button>
+                     <div class="col-sm-6 col-xs-12">
+                        <p class="ellipsis">nombre_del_archivo_cargado.docx</p>
                      </div>
-                     <div class="progress progress-striped active">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-                           <span class="sr-only">45% completado</span>
-                        </div>
-                     </div><!--/.progress-bar-->
-                  </div>
-               </div>
-               <div class="col-md-6">
-                  <div class="form-group">
-                     <label for="norma-a-consultar" class="title-third">Mensaje *</label>
-                     <textarea class="form-control" rows="5" placeholder="Escriba aquí su mensaje"></textarea>
-                  </div>
-               </div>
+                  </div><!--/.row-->
+               </div><!--/.col-md-6--> 
             </div><!--/.row-->
+            <div class="row">
+               <div class="col-xs-12">
+                  <div class="progress progress-striped active">
+                     <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                        <span class="sr-only">45% completado</span>
+                     </div>
+                  </div><!--/.progress-bar-->
+               </div>
+            </div><!--/.row-->    
+            <div class="row">
+               <div class="col-xs-12 form-group">
+                  <label for="norma-a-consultar" class="title-third">Mensaje *</label>
+                  <textarea class="form-control" rows="5" placeholder="Escriba aquí su mensaje"></textarea>
+               </div>
+            </div>
+            
             <hr class="border-bottom-gray" />
             <!-- revisar -->
 
