--- a/app/styles/_autocomplete.scss
+++ b/app/styles/_autocomplete.scss
@@ -21,7 +21,7 @@
 			&:focus,
 			&:hover
 			{
-				background-color: $color-soft-blue;
+				background-color: $color-light-orange;
 				color: white;
 			}
 			p
