--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -20,20 +20,20 @@
             <fieldset>
                 <legend class="title-third text-bold">Filtrar resultados</legend>
                 <section id="normativa-filters-tags" class="filters">
-                    <button class="tag filters-tags" ng-repeat="filter in activeFilters">{{filter.name}} <i class="fa fa-remove"></i></button>
+                    <button class="tag filters-tags" ng-repeat="filter in activeFilters">{{filter.name}} <i class="fa fa-remove" ng-click="deleteFilter('{{filter.value}}')"></i></button>
                     <a href="#" title="Mostrar todos" ng-show="activeFilters.length > 0 " class="show-all">mostrar todos (+{{activeFilters.length}})</a>
                 </section><!--/#normativa-filters-tags-->
                 <div>
                     <div class="row">
                         <div class="form-group col-md-12 col-xs-6">
                             <label for="filters-categorias" class="title-third">Categoría</label>
-                            <select ng-model="currentCategory" ng-options="category.name  for category in categories" class="form-control"  ng-change="agregarfiltroCategoria()">
+                            <select ng-model="currentCategory" ng-options="category.name  for category in categories" class="form-control"  ng-change="addCategoryFilter()">
                                 <option value="" selected disabled>Todas </option>
                             </select>
                         </div>
                         <div class="form-group col-md-12 col-xs-6">
                             <label for="filters-tema" class="title-third">Tema</label>
-                             <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control"  ng-change="agregarfiltroTema()" >
+                             <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control"  ng-change="addTopicFilter()" >
                                   <option value="" selected disabled>Todos </option>
                              </select>
                         </div>
@@ -52,13 +52,13 @@
                             <label for="filters-fecha-sancion" class="title-fourth">Fecha de sanción</label>
                             <div class="row">
                                 <div class="col-sm-6">
-                                   <select ng-model="fechaDesde" ng-options="fecha  for fecha in fechas" class="form-control" >
+                                   <select ng-model="currentSinceDate" ng-options="date  for date in dates" class="form-control" ng-change="checkDateFilter()" >
                                          <option value="" selected disabled>Desde </option>
                                         
                                     </select>
                                 </div>
                                 <div class="col-sm-6">
-                                    <select ng-model="fechaHasta" ng-options="fecha  for fecha in fechas" class="form-control" >
+                                    <select ng-model="currentUntilDate" ng-options="date  for date in dates" class="form-control"  ng-change="checkDateFilter()">
                                         <option value="" disabled selected>Hasta</option>
                                     </select>
                                 </div>
